--- a/views/main.erb
+++ b/views/main.erb
@@ -26,7 +26,7 @@
   <div class="container">
     <h3> Get, edit or delete key-value pairs, for fun. </h3>
     </br>
-    <a href="/keys">keys</a>
+    <p><a href="/keys">keys</a></p>
     </br>
     <form role="form" name="myForm" onSubmit="return handleSubmit()">
       <div type="text" class="alert alert-warning" id="response" role="alert" style="display:none;"> </div>
