added link to /keys

--- a/views/main.erb
+++ b/views/main.erb
@@ -45,6 +45,7 @@
           <li><a href="#" id="put">Put</a></li>
           <li><a href="#" id="delete">Delete</a></li>
         </ul>
+<a href="/keys" class="btn btn-info" role="button">Show Keys</a>
       </div>
     </form>
   </div>
